--- a/pom.xml
+++ b/pom.xml
@@ -135,7 +135,11 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<excludeDevtools>false</excludeDevtools>
+				</configuration>
 			</plugin>
+
 		</plugins>
 	</build>
 
